--- a/latex/sections/introduction.tex
+++ b/latex/sections/introduction.tex
@@ -6,4 +6,4 @@ The radial velocity method was used to discover the first exoplanets and continu
 \vspace{0.5cm}
 \todo{} Write that the EXPRES pipeline is very long and complicated and in this paper I will describe a few basic things in the pibeline along with the few things that I have actually worked on.
 
-
+\todo{}Write that this paper is intented as an introduction to other students with similar backgrounds to mine interested in working with LFC calib and RV extractions, giving an overview of the data, the problem, and the specific things that I have tried, in hope that it can kickstart their understanding of the project.
