--- a/latex/sections/theory.tex
+++ b/latex/sections/theory.tex
@@ -6,6 +6,11 @@ A large planet like Jupiter induces a radial velocity (RV) in the Sun of about 1
 \vspace{0.5cm}
 \todo{Possibly describe the RV calculation in more \href{http://exoplanets.astro.yale.edu/workshop/EPRV/Bibliography_files/Radial_Velocity.pdf}{detail} and compute Earth K. } 
 
+\subsubsection{Doppler shift}
+
+
+
+
 \subsection{Description of the instrument}
 The EXtreme PREcision Spectrograph or EXPRES is situated at the Lowell Observatory's 4.3m Lowell Discovery Telescope (LDT) near Flagstaff, Arizona, U.S.A. The LDT allows for up to 280 partial nights of observation per year. 
 
