--- a/latex/references.bib
+++ b/latex/references.bib
@@ -42,4 +42,25 @@
   organization={International Society for Optics and Photonics}
 }
 
-    
+@article{doppler_shift_GR_formular,
+  title={The fundamental definition of “radial velocity”},
+  author={Lindegren, Lennart and Dravins, Dainis},
+  journal={Astronomy \& Astrophysics},
+  volume={401},
+  number={3},
+  pages={1185--1201},
+  year={2003},
+  publisher={EDP Sciences}
+}
+
+
+@article{star_properties,
+  title={Spectral properties of cool stars: extended abundance analysis of 1,617 planet-search stars},
+  author={Brewer, John M and Fischer, Debra A and Valenti, Jeff A and Piskunov, Nikolai},
+  journal={The Astrophysical Journal Supplement Series},
+  volume={225},
+  number={2},
+  pages={32},
+  year={2016},
+  publisher={IOP Publishing}
+}
